package fr.tyr.components.violence.enums;

import java.util.Arrays;
import java.util.List;

public enum Types {
    PHYSICAL,
    ECONOMICAL,
    VERBAL,
    PSYCHOLOGICAL,
    SEXUAL    ;
}