@startuml
skinparam classAttributeIconSize 0

package violence{
    class ViolenceCard{
        ..Methods..
        <<create>>ViolenceCard()
        + getIcon(): Icon
        + setIcon(Icon)
        + getBackground(): Backgrounds
        +setBackground(Backgrounds)
        + getActs(): Acts
        + setActs(Acts)
        + getTypes(): Types
        + setTypes(Types)
        + setDescription(acts: Acts)
        + resize(size: Vector2D)
        + finalize(position: Vector2D)
        + finalizeText(text: String): TextComponent[]
    }
    class ViolenceCardBuilder{
        ..Fields..
        rand: Random {static}
        ..Methods..
        + generateIcon(type: Types)
        + generateBackground(type: Types)
        + generateActs(type: Types)
        + generateType()
        + getViolenceCard(): ViolenceCard
    }
    class ViolenceCardDirector {
        ..Methods..
        + generateCard()
        + getViolenceCardBuilder(): ViolenceCardBuilder
    }
    package enums {
        enum Types{
            PHYSICAL
            ECONOMIC
            VERBAL
            PSYCHOLOGICAL
            SEXUAL
        }
        enum Backgrounds{
            ..Fields..
            - type: Types
            - background: Images
            ..Methods..
            <<create>> Backgrounds(type: Types, background: Images)
            + getImage(): Images
        }
        enum Icon{
            ..Fields..
            - type: Types
            - icon: Images
            ..Methods..
            <<create>> Icon(type: Types, icon: Images)
            + getImage(): Images
        }
        enum Acts{
        ..Fields..
        - type: Types
        - description: String
        ..Methods..
        <<create>> Acts(type: Types, description: String)
        + getAllActs(type: Types) Acts[]
        + getDescription(): String
        }
    }
}
violence.ViolenceCard o-->"1\n-_icon" violence.enums.Icon
violence.ViolenceCard o-->"1\n-_background" violence.enums.Backgrounds
violence.ViolenceCard o-->"1\n-_acts" violence.enums.Acts
violence.ViolenceCard o-->"1\n-_type" violence.enums.Types
violence.ViolenceCardBuilder o-->"1\n-_violenceCard" violence.ViolenceCard
violence.ViolenceCardDirector o-->"1\n-_violenceCardBuilder" violence.ViolenceCardBuilder

@enduml